--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,41 +1,37 @@
 name: AtTrackt
+
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
-      pull_request:
-      branches:
-        -main
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      jobs:
-        build:
-          runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-        steps:
-          - name: AtTrackt
-            uses: actions/checkout@v2
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.22.3'
 
-          - name: Set up flutter
-            uses: subosito/flutter-action@v2
-            with:
-            flutter-version: '3.22.3'
-          
-          - name: Get dependencies
-            run: flutter pub get
+      - name: Get dependencies
+        run: flutter pub get
 
-          - name: Run Tests
-            run: flutter test
+      - name: Run tests
+        run: flutter test
 
-          - name: Build APK
-            run: flutter build apk --release 
+      - name: Build APK
+        run: flutter build apk --release
 
-          - name: Upload APK file to artifacts
-            uses: actions/upload-artifact@v2
-            with:
-              name: app-release
-              path: build/app/outputs/flutter-apk/app-release.apk
-
-
-
-
+      - name: Upload APK file to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
