--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.1.4
+  firebase_storage: ^12.1.3
+  firebase_auth: ^5.1.4
+  firebase_core: ^3.3.0
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  uuid: ^4.4.2
+  qr_bar_code: ^1.3.0
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
