--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   uuid: ^4.4.2
   qr_bar_code: ^1.3.0
   cloud_firestore: ^5.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
