--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   image_picker: ^1.1.2
   provider: ^6.1.2
   intl: ^0.19.0
+  mobile_scanner: ^5.2.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
